[gd_scene load_steps=23 format=3 uid="uid://c0va0dlncfwp7"]

[ext_resource type="Script" uid="uid://si38pcrhe850" path="res://objects/monster/monster.gd" id="1_fnnf6"]
[ext_resource type="Texture2D" uid="uid://cmmo4y7pjkjor" path="res://Art/Character/Enemy/Knight/Soldier.png" id="2_3sr5p"]
[ext_resource type="Script" uid="uid://bjv1jeys0wqgg" path="res://Scripts/extendables/hitbox.gd" id="3_owdcf"]
[ext_resource type="Script" uid="uid://crkf2vlfo4a04" path="res://Scripts/extendables/health.gd" id="4_3b4da"]
[ext_resource type="Script" uid="uid://dcb5cmaa8ju5d" path="res://objects/monster/monster_animation.gd" id="5_ub8mq"]
[ext_resource type="PackedScene" uid="uid://c18522k280og1" path="res://UI/HP bar/hpbar.tscn" id="6_u266j"]
[ext_resource type="Script" uid="uid://dfenop2klq68" path="res://Scripts/state/monster_state_machine.gd" id="7_7u1hp"]
[ext_resource type="Script" uid="uid://c83sjclc1sfwx" path="res://Scripts/state/enemy state/idle.gd" id="8_yowvb"]
[ext_resource type="Script" uid="uid://niyt4j1nksp3" path="res://Scripts/state/enemy state/chase.gd" id="9_fl43i"]
[ext_resource type="Script" uid="uid://d1vuobtu303u7" path="res://Scripts/state/stun.gd" id="10_yhxaj"]
[ext_resource type="Script" uid="uid://j85pxuxblc12" path="res://Scripts/state/enemy state/attack.gd" id="11_p3ca3"]
[ext_resource type="Script" uid="uid://c8lnw6atgefsy" path="res://Scene/initiate_arrow.gd" id="12_3sr5p"]
[ext_resource type="Script" uid="uid://07g78ayrit7i" path="res://Scripts/state/enemy state/death.gd" id="12_lkjf2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v4wv7"]
radius = 4.0
height = 20.0

[sub_resource type="Animation" id="Animation_wq6hg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Monster_HurtboxArea/Hurtbox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_akcy7"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2i(0, 4), Vector2i(8, 4)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../MonsterStateMachine/InitiateArrow")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.866667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot_arrow"
}]
}

[sub_resource type="Animation" id="Animation_y3pn2"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2i(0, 6), Vector2i(4, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 12), Vector2(0, 12)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../CollisionShape2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.5708, 1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Monster_HurtboxArea/Hurtbox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.0333333, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_a2b7y"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.608283),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2i(0, 5), Vector2i(3, 5)]
}

[sub_resource type="Animation" id="Animation_6gqlx"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2i(0, 0), Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_kib7l"]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2i(0, 1), Vector2i(7, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a2b7y"]
_data = {
&"RESET": SubResource("Animation_wq6hg"),
&"attack": SubResource("Animation_akcy7"),
&"death": SubResource("Animation_y3pn2"),
&"hurt": SubResource("Animation_a2b7y"),
&"idle": SubResource("Animation_6gqlx"),
&"walk": SubResource("Animation_kib7l")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ga5te"]
size = Vector2(28.3333, 40.5833)

[node name="Monster_Archer" type="CharacterBody2D" groups=["Monster"]]
z_index = 1
scale = Vector2(3, 3)
collision_layer = 4
collision_mask = 196
script = ExtResource("1_fnnf6")
chase_radius = 3000.0
attack_range = 5000.0

[node name="this is archer (will change later)" type="Node" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Monster"]]
position = Vector2(0, 12)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_v4wv7")
disabled = true

[node name="KnightBody" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_3sr5p")
hframes = 9
vframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../KnightBody")
libraries = {
&"": SubResource("AnimationLibrary_a2b7y")
}
autoplay = "idle"

[node name="Monster_HurtboxArea" type="Area2D" parent="." groups=["Monster"]]
collision_layer = 128
script = ExtResource("3_owdcf")

[node name="Hurtbox" type="CollisionShape2D" parent="Monster_HurtboxArea" groups=["Monster"]]
position = Vector2(-0.333333, -3.375)
shape = SubResource("RectangleShape2D_ga5te")

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("hitbox")]
script = ExtResource("4_3b4da")
hitbox = NodePath("../Monster_HurtboxArea")

[node name="Monster_Animation" type="Node" parent="." node_paths=PackedStringArray("anim", "sprite")]
script = ExtResource("5_ub8mq")
anim = NodePath("../AnimationPlayer")
sprite = NodePath("../KnightBody")

[node name="Hpbar" parent="." node_paths=PackedStringArray("HPnode") instance=ExtResource("6_u266j")]
offset_left = -25.0
offset_top = -19.0
offset_right = 480.0
offset_bottom = 4.0
scale = Vector2(0.1, 0.1)
HPnode = NodePath("../Health")

[node name="MonsterStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("7_7u1hp")
initial_state = NodePath("Chase")

[node name="Idle" type="Node" parent="MonsterStateMachine"]
script = ExtResource("8_yowvb")
metadata/_custom_type_script = "uid://cxqn24exvp8cj"

[node name="Chase" type="Node" parent="MonsterStateMachine"]
script = ExtResource("9_fl43i")
metadata/_custom_type_script = "uid://cxqn24exvp8cj"

[node name="Attack" type="Node" parent="MonsterStateMachine"]
script = ExtResource("11_p3ca3")
metadata/_custom_type_script = "uid://cxqn24exvp8cj"

[node name="InitiateArrow" type="Node" parent="MonsterStateMachine"]
script = ExtResource("12_3sr5p")

[node name="Stun" type="Node" parent="MonsterStateMachine"]
script = ExtResource("10_yhxaj")
stun_time = 0.5
metadata/_custom_type_script = "uid://cxqn24exvp8cj"

[node name="Death" type="Node" parent="MonsterStateMachine"]
script = ExtResource("12_lkjf2")
metadata/_custom_type_script = "uid://cxqn24exvp8cj"

[node name="DamageNumbersPosition" type="Node2D" parent="."]
position = Vector2(-6.33333, -30.3333)

[connection signal="damaged" from="Monster_HurtboxArea" to="." method="on_damaged"]
[connection signal="damaged" from="Monster_HurtboxArea" to="Health" method="on_damaged"]
